add beeImage and beginnerr template

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,3 +1,10 @@
 .header{
     padding: 40px 0px;
+
+    & .container{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
 }
