--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -2,4 +2,18 @@
     background-image:linear-gradient(to right, #ffedbb  0 50%,#ffffff 50% 100%);
     width:100%;
     height:100vh;
+
+    &__main-section{
+        
+        .container{
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+        }
+    }
+    &__form{
+        width: 35%;
+        border: 2px solid red;
+    }
 }
