--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -1,5 +1,5 @@
 .login{
-    background-image:linear-gradient(to right, #ffedbb  0 50%,#ffffff 50% 100%);
+    background-image:#ffedbb;
     width:100%;
     height:100vh;
 
@@ -15,5 +15,15 @@
     &__form{
         width: 35%;
         border: 2px solid red;
+        position: relative;
+        
+    }
+    &__form-wrapper{
+        position: absolute;
+        width: 50%;
+        background-color: white;
+        height: 100vh;
+        top: 0;
+        right: 0;
     }
 }
