--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,7 +1,9 @@
-.header{
+.header {
     padding: 40px 0px;
+    position: relative;
+    z-index: 10;
 
-    & .container{
+    & .container {
         display: flex;
         justify-content: space-between;
         align-items: center;
