--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -7,25 +7,42 @@
         width: 100%;
         display: flex;
         justify-content: center;
-        align-items: flex-start;
+        align-items: center;
   
     }
     &__form{
-        width: 35%;
+        width: 70%;
+        margin-left: 50px;
         border: 1px solid red;
         position: relative;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
         
+        &__inputs{
+            margin-top: 20px;
+            width: 60%;
+        }
     }
+
     &__form-wrapper{
+        display: flex;
+        justify-content: center;
         position: absolute;
-        width: 50%;
+        width: 60%;
         background-color: white;
         height: 100vh;
         top: 0;
         right: 0;
         z-index: 0;
+        border-radius: 50px 0 0 50px;
     }
     &__be-image{
         z-index: 2;
+        transform: translateX(-70%) translateY(10%);
+    }
+    &__title{
+        font-size: 40px;
+        font-weight: 600;
     }
 }
