--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -1,48 +1,202 @@
-.login{
-    background-color:#ffedbb;
-    width:100%;
-    height:100vh;
+.login {
+	width: 100%;
+	height: 100vh;
+	background-color: #ffedbb;
+	overflow: hidden;
+    
+	&__bee-image {
+		width: 350px;
+		z-index: 2;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translateY(-50%) translateX(-120%);
+	}
 
-    &__main-section{
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-  
-    }
-    &__form{
-        width: 70%;
-        margin-left: 50px;
-        border: 1px solid red;
-        position: relative;
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        
-        &__inputs{
-            margin-top: 20px;
-            width: 60%;
-        }
-    }
+	&__main-section {
+		width: 100%;
+		height: 100vh;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
 
-    &__form-wrapper{
-        display: flex;
-        justify-content: center;
-        position: absolute;
-        width: 60%;
-        background-color: white;
-        height: 100vh;
-        top: 0;
-        right: 0;
-        z-index: 0;
-        border-radius: 50px 0 0 50px;
-    }
-    &__be-image{
-        z-index: 2;
-        transform: translateX(-70%) translateY(10%);
-    }
-    &__title{
-        font-size: 40px;
-        font-weight: 600;
-    }
+	&__form {
+		width: 70%;
+		margin-left: 50px;
+		position: relative;
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+
+		&__inputs {
+			margin-top: 20px;
+			width: 60%;
+
+			.input__wrapper {
+				margin-top: 15px;
+			}
+		}
+
+		button {
+			width: 20%;
+			margin-top: 50px;
+		}
+
+		&__forgot-password-link {
+			margin-top: 20px;
+		}
+
+		&__signup-text-wrapper > * {
+			display: inline-block;
+		}
+
+		&__signup-text-wrapper > p {
+			margin-right: 5px;
+		}
+	}
+
+	&__form-wrapper {
+		display: flex;
+		justify-content: center;
+		position: absolute;
+		width: 60%;
+		overflow-y: scroll;
+		background-color: white;
+		height: 100vh;
+		top: 0;
+		right: 0;
+		z-index: 0;
+		border-radius: 50px 0 0 50px;
+	}
+
+	&__form-wrapper::-webkit-scrollbar {
+		display: none;
+	}
+
+	&__bee-image {
+		z-index: 2;
+		transform: translateX(-70%) translateY(10%);
+	}
+
+	&__title {
+		font-size: 40px;
+		font-weight: 600;
+	}
 }
+
+// @media (max-width: 1185px) {
+// 	.login {
+// 		&__bee-image {
+// 			width: 300px;
+// 			z-index: 2;
+// 			// transform: translateX(-70%) translateY(10%);
+// 		}
+
+// 		&__form {
+// 			&__inputs {
+// 				margin-top: 20px;
+// 				width: 80%;
+
+// 				.input__wrapper {
+// 					margin-top: 15px;
+// 				}
+// 			}
+// 		}
+// 	}
+// }
+
+// @media (max-width: 1020px) {
+// 	.login {
+// 		&__bee-image {
+// 			width: 270px;
+// 			z-index: 2;
+// 		}
+// 	}
+// }
+
+// @media (max-width: 807px) {
+// 	.login {
+// 		&__bee-image {
+// 			width: 250px;
+// 			z-index: 2;
+// 		}
+// 	}
+// }
+
+// @media (max-width: 777px) {
+// 	.login {
+// 		&__main-section {
+// 			flex-direction: column;
+// 		}
+
+// 		&__form {
+// 			margin: 0;
+
+// 			&__inputs {
+// 				margin-top: 20px;
+// 				width: 100%;
+
+// 				.input__wrapper {
+// 					margin-top: 15px;
+// 				}
+// 			}
+
+// 			button {
+// 				width: 30%;
+// 				margin-top: 50px;
+// 			}
+// 		}
+
+// 		&__bee-image {
+// 			width: 200px;
+// 			position: absolute;
+// 			z-index: 0;
+// 			top: 10%;
+// 			left: 50%;
+// 			transform: translateX(-50%);
+// 		}
+
+// 		&__form-wrapper {
+// 			display: flex;
+// 			justify-content: center;
+// 			position: fixed;
+// 			width: 100%;
+// 			bottom: 0;
+// 			background-color: white;
+// 			height: 60vh;
+// 			top: auto;
+// 			right: 0;
+// 			border-radius: 50px 50px 0 0;
+// 		}
+// 	}
+// }
+
+// @media (max-width: 600px) {
+// 	.login {
+// 		&__form {
+// 			width: 90%;
+// 			justify-content: flex-start;
+// 			padding-top: 30px;
+// 			padding-bottom: 50px;
+
+// 			button {
+// 				margin-top: 20px;
+// 			}
+// 		}
+
+// 		&__title {
+// 			font-size: 30px;
+// 		}
+// 	}
+// }
+
+// @media (max-width: 400px) {
+// 	.login {
+// 		&__bee-image {
+// 			width: 180px;
+// 			z-index: 0;
+// 			transform: translateX(-50%) translateY(13%);
+// 		}
+// 	}
+// }
