--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,12 +1,11 @@
 .header {
-    padding: 40px 0px;
-    position: relative;
-    z-index: 10;
+	padding: 40px 0;
+	position: relative;
+	z-index: 10;
 
-    & .container {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
+	& .container {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
 }
