--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -3,7 +3,7 @@
 	height: 100vh;
 	background-color: #ffedbb;
 	overflow: hidden;
-    
+
 	&__bee-image {
 		width: 350px;
 		z-index: 2;
@@ -76,7 +76,7 @@
 
 	&__bee-image {
 		z-index: 2;
-		transform: translateX(-70%) translateY(10%);
+		// transform: translateX(-70%) translateY(10%);
 	}
 
 	&__title {
@@ -85,118 +85,118 @@
 	}
 }
 
-// @media (max-width: 1185px) {
-// 	.login {
-// 		&__bee-image {
-// 			width: 300px;
-// 			z-index: 2;
-// 			// transform: translateX(-70%) translateY(10%);
-// 		}
+@media (max-width: 1185px) {
+	.login {
+		&__bee-image {
+			width: 300px;
+			z-index: 2;
+			// transform: translateX(-70%) translateY(10%);
+		}
 
-// 		&__form {
-// 			&__inputs {
-// 				margin-top: 20px;
-// 				width: 80%;
+		&__form {
+			&__inputs {
+				margin-top: 20px;
+				width: 80%;
 
-// 				.input__wrapper {
-// 					margin-top: 15px;
-// 				}
-// 			}
-// 		}
-// 	}
-// }
+				.input__wrapper {
+					margin-top: 15px;
+				}
+			}
+		}
+	}
+}
 
-// @media (max-width: 1020px) {
-// 	.login {
-// 		&__bee-image {
-// 			width: 270px;
-// 			z-index: 2;
-// 		}
-// 	}
-// }
+@media (max-width: 1020px) {
+	.login {
+		&__bee-image {
+			width: 270px;
+			z-index: 2;
+		}
+	}
+}
 
-// @media (max-width: 807px) {
-// 	.login {
-// 		&__bee-image {
-// 			width: 250px;
-// 			z-index: 2;
-// 		}
-// 	}
-// }
+@media (max-width: 807px) {
+	.login {
+		&__bee-image {
+			width: 250px;
+			z-index: 2;
+		}
+	}
+}
 
-// @media (max-width: 777px) {
-// 	.login {
-// 		&__main-section {
-// 			flex-direction: column;
-// 		}
+@media (max-width: 777px) {
+	.login {
+		&__main-section {
+			flex-direction: column;
+		}
 
-// 		&__form {
-// 			margin: 0;
+		&__form {
+			margin: 0;
 
-// 			&__inputs {
-// 				margin-top: 20px;
-// 				width: 100%;
+			&__inputs {
+				margin-top: 20px;
+				width: 100%;
 
-// 				.input__wrapper {
-// 					margin-top: 15px;
-// 				}
-// 			}
+				.input__wrapper {
+					margin-top: 15px;
+				}
+			}
 
-// 			button {
-// 				width: 30%;
-// 				margin-top: 50px;
-// 			}
-// 		}
+			button {
+				width: 30%;
+				margin-top: 50px;
+			}
+		}
 
-// 		&__bee-image {
-// 			width: 200px;
-// 			position: absolute;
-// 			z-index: 0;
-// 			top: 10%;
-// 			left: 50%;
-// 			transform: translateX(-50%);
-// 		}
+		&__bee-image {
+			width: 200px;
+			position: absolute;
+			z-index: 0;
+			top: 10%;
+			left: 50%;
+			transform: translateX(-50%);
+		}
 
-// 		&__form-wrapper {
-// 			display: flex;
-// 			justify-content: center;
-// 			position: fixed;
-// 			width: 100%;
-// 			bottom: 0;
-// 			background-color: white;
-// 			height: 60vh;
-// 			top: auto;
-// 			right: 0;
-// 			border-radius: 50px 50px 0 0;
-// 		}
-// 	}
-// }
+		&__form-wrapper {
+			display: flex;
+			justify-content: center;
+			position: fixed;
+			width: 100%;
+			bottom: 0;
+			background-color: white;
+			height: 60vh;
+			top: auto;
+			right: 0;
+			border-radius: 50px 50px 0 0;
+		}
+	}
+}
 
-// @media (max-width: 600px) {
-// 	.login {
-// 		&__form {
-// 			width: 90%;
-// 			justify-content: flex-start;
-// 			padding-top: 30px;
-// 			padding-bottom: 50px;
+@media (max-width: 600px) {
+	.login {
+		&__form {
+			width: 90%;
+			justify-content: flex-start;
+			padding-top: 30px;
+			padding-bottom: 50px;
 
-// 			button {
-// 				margin-top: 20px;
-// 			}
-// 		}
+			button {
+				margin-top: 20px;
+			}
+		}
 
-// 		&__title {
-// 			font-size: 30px;
-// 		}
-// 	}
-// }
+		&__title {
+			font-size: 30px;
+		}
+	}
+}
 
-// @media (max-width: 400px) {
-// 	.login {
-// 		&__bee-image {
-// 			width: 180px;
-// 			z-index: 0;
-// 			transform: translateX(-50%) translateY(13%);
-// 		}
-// 	}
-// }
+@media (max-width: 400px) {
+	.login {
+		&__bee-image {
+			width: 180px;
+			z-index: 0;
+			transform: translateX(-50%) translateY(13%);
+		}
+	}
+}
